Config File Changes

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ owner:
   # Social networking links used in footer. Update and remove as you like.
   twitter:        sh4nx0r
   facebook:       sh4nx0r
-  github:         sh4nx0r      
+  github:         sh4nx0r
+  linkedin:	  shankardamodaran      
   #instagram:      ''
   # For Google Authorship https://plus.google.com/authorship
   #google_plus:    https://plus.google.com/u/0/102602916593522619858
