--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            <b>welcome to sh4's personal arena</b><br><br>you will find my notes on <b>life, travel, photography, <u>infosec</u></b> & almost everything I'd love to share.<br><br><sup>(Right now there are no blog posts, I will be publishing sooner or later)</sup>
-description:      I make stuff. I hack stuff.
+description:      y3t anoth3r h4ck3r
 logo:             logo.png
 disqus_shortname: sh4.in
 share:            true
