--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ dropcap:	   true
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:    sh4.in    	  
+url:   ''   	  
 
 # Owner/author information
 owner:
@@ -39,8 +39,8 @@ links:
     url: /
     external: false
     icon: home
-  - title: Featured Posts
-    url: /featured
+  - title: Hot Posts
+    url: /hot
   - title: Touch Base
     url: /touchbase
 
