--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            <b><font size='3.75em'>welcome to sh4's personal arena</b></font><br><br><font size='2.75em'>you will find my notes on <b>life, travel, photography, <u>infosec</u></b> & almost everything I'd love to share.</font>
-description:      <font size='2.75em'>Inventor<font color='red' size='3.75em'>.</font> Developer<font color='red' size='3.75em'>.</font> Hacker<font color='red' size='3.75em'>.</font></font><br><font size='1.75em'>“A talented social engineer is considered to be the most dangerous hacker.” -shankar damodaran</font>
+description:      <font size='2.75em'>Inventor<font color='red' size='3.75em'>.</font> Developer<font color='red' size='3.75em'>.</font> Hacker<font color='red' size='3.75em'>.</font></font><br><font size='1.75em'>“A talented social engineer is considered to be the most dangerous hacker.” -shankar damodaran</font><br><img src='images/scrollimg.png' />
 
 logo:		logo.png
 disqus_shortname: sh4in
