--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ owner:
   avatar:         shan.jpg
   email:          shan@signalhack.net
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    Inventor. Developer. Hacker.
+  description:    Inventor. Hacker. Foodie. Traveller. Biker Enthusiast.
   # Social networking links used in footer. Update and remove as you like.
   twitter:        sh4nx0r
   facebook:       sh4nx0r
