--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ url:   ''
 owner:
   name:           Shankar Damodaran
   avatar:         shan.jpg
-  email:          shan@signalhack.net
+  email:          d.shankarnarayana@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    Inventor. Hacker. Foodie. Traveller. Biker Enthusiast.
+  description:    Inventor. Hacker. Foodie. Traveller. Biker.
   # Social networking links used in footer. Update and remove as you like.
   twitter:        sh4nx0r
   facebook:       sh4nx0r
