--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            <b><font size='4.75em'>welcome to sh4's personal arena</b></font><br><br><font size='2.75em'>you will find my notes on <b>life, travel, photography, <u>infosec</u></b> & almost everything I'd love to share.</font>
-description:      <font size='3.75em'>Inventor<font color='red' size='4.75em'>.</font> Biker<font color='red' size='4.75em'>.</font> Foodie<font color='red' size='4.75em'>.</font> Traveller<font color='red' size='4.75em'>.</font> Hacker<font color='red' size='4.75em'>.</font> </font><br><font size='2.75em'>Disclaimer - Views expressed throughout the site are my own, you may expect a mediocre profanity factor on the blog posts.</font><br><img src='images/scrollimg.png' />
+title:            <b><font size='3.75em'>Inventor<font color='black' size='4.75em'>.</font> Biker<font color='black' size='4.75em'>.</font> Foodie<font color='black' size='4.75em'>.</font> Hacker<font color='black' size='4.75em'>.</font> Wanderlust<font color='black' size='4.75em'>. </font> </font><br><br><font size='2.75em'>you will find my notes on <b>life, travel, photography, <u>infosec</u></b> & almost everything I'd love to share.</font>
+description:      <font size='2.75em'>Disclaimer - Views expressed throughout the site are my own, you may expect a mediocre profanity factor on the blog posts.</font>
 
 logo:		logo.png
 disqus_shortname: sh4in
