--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ timezone:    Asia/Dhaka
 future:      true
 highlighter: rouge
 markdown:    kramdown
-plugins: ["jekyll-paginate","jemoji"]
+plugins: [jekyll-paginate,jemoji]
 paginate:    5
 paginate_path: "page:num"
 
