--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ links:
 #    url: /about
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    Asia/Dhaka
+timezone:    Asia/Calcutta
 future:      true
 highlighter: rouge
 markdown:    kramdown
