--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url:   ''
 # Owner/author information
 owner:
   name:           Shankar Damodaran
-  avatar:         shan.jpg
+  avatar:         shanks_cover.jpg
   email:          d.shankarnarayana@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    Inventor. Hacker. Foodie. Traveller. Biker.
