--- a/_config.yml
+++ b/_config.yml
@@ -77,8 +77,8 @@ kramdown:
 
 prose:
   rooturl: '_posts'
-  #siteurl: 'http://sh4nx0r.github.io/'
-  #relativeLinks: 'http://sh4nx0r.github.io/links.jsonp'
+  #siteurl: 'https://sh4nx0r.github.io/'
+  #relativeLinks: 'https://sh4nx0r.github.io/links.jsonp'
   media: 'images'
   metadata:
     _posts:
